--- a/src/GUI/icons.qrc
+++ b/src/GUI/icons.qrc
@@ -1,6 +1,10 @@
 <RCC>
     <qresource prefix="/" >
-        <file>images/open.png</file>
         <file>images/qt.png</file>
+        <file>images/search.svg</file>
+        <file>images/fileopen.svg</file>
+        <file>images/settings.svg</file>
+        <file>images/fileopen_small.png</file>
+        <file>images/export.svg</file>
     </qresource>
 </RCC>
