--- a/src/GUI/icons.qrc
+++ b/src/GUI/icons.qrc
@@ -6,5 +6,9 @@
         <file>images/settings.svg</file>
         <file>images/fileopen_small.png</file>
         <file>images/export.svg</file>
+        <file>images/spreadsheet.svg</file>
+        <file>images/filenew.svg</file>
+        <file>images/filedel.svg</file>
+        <file>images/fileedit.svg</file>
     </qresource>
 </RCC>
