--- a/src/GUI/icons.qrc
+++ b/src/GUI/icons.qrc
@@ -12,5 +12,6 @@
         <file>images/fileedit.svg</file>
         <file>images/filesave.svg</file>
         <file>images/filesaveas.svg</file>
+        <file>images/addtotree.svg</file>
     </qresource>
 </RCC>
